// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Core > applyAutoFixes > basic 1`] = `"const a = 1;"`;

exports[`Core > applyAutoFixes > fix overlapped problems 1`] = `
"() => {return (
  () => {return (
    () => {return (
      () => {return (
        () => {return (
          () => {return (
            () => {return (
              () => {return (
                () => {return (
                  () => {return (
                    () => (
                      () => (
                        0
                      )
                    )
                  )}
                )}
              )}
            )}
          )}
        )}
      )}
    )}
  )}
)};"
`;

exports[`Core > applySuggestions 1`] = `"const a = 1;"`;

exports[`Core > constructor > pass options to eslint 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/index.js",
    "messages": [
      {
        "ruleId": "prefer-const",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/index.mjs",
    "messages": [
      {
        "ruleId": "ban-exponentiation-operator",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
]
`;

exports[`Core > disablePerFile 1`] = `
"/* eslint-disable ban-exponentiation-operator */
2 ** 2;"
`;

exports[`Core > disablePerLine 1`] = `
"// eslint-disable-next-line ban-exponentiation-operator
2 ** 2;"
`;

exports[`Core > lint > returns lint results 1`] = `
[
  {
    "errorCount": 12,
    "filePath": "<fixture>/src/arrow-body-style.js",
    "messages": [
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/ban-exponentiation-operator.js",
    "messages": [
      {
        "ruleId": "ban-exponentiation-operator",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/import-order.js",
    "messages": [
      {
        "ruleId": "import/order",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/no-unused-vars.js",
    "messages": [
      {
        "ruleId": "no-unused-vars",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/prefer-const.js",
    "messages": [
      {
        "ruleId": "prefer-const",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 0,
    "filePath": "<fixture>/src/warn.js",
    "messages": [
      {
        "ruleId": "prefer-const",
        "severity": 1,
      },
    ],
    "warningCount": 1,
  },
]
`;

exports[`Core > makeFixableAndFix 1`] = `"const _a = 1;"`;

exports[`Core > printDetailsOfResults 1`] = `
"[31merror[39m: [1mBan exponentiation operator[22m [2m(ban-exponentiation-operator)[22m at [32m<fixture>/src/ban-exponentiation-operator.js:1:1[39m:
> 1 | 2 ** 2;
    | ^


[31merror[39m: [1mDefinition for rule 'import/order' was not found[22m [2m(import/order)[22m at [32m<fixture>/src/import-order.js:1:1[39m:
> 1 | import b from 'b';
    | ^
  2 | import a from 'a';


[31m[1m2 errors found.[22m[39m"
`;

exports[`Core > printSummaryOfResults 1`] = `
"[1m- 6 files (0 file passed, [91m6 files failed[39m) checked.[22m
[1m- 17 problems ([31m16 errors[39m, [33m1 warning[39m) found.[22m
╔═════════════════════════════╤═══════╤═════════╤════════════╤═════════════════╗
║ Rule                        │ Error │ Warning │ is fixable │ has suggestions ║
╟─────────────────────────────┼───────┼─────────┼────────────┼─────────────────╢
║ arrow-body-style            │ [31m[1m12[39m[22m    │ 0       │ [31m[1m12[39m[22m         │ 0               ║
╟─────────────────────────────┼───────┼─────────┼────────────┼─────────────────╢
║ ban-exponentiation-operator │ [31m[1m1[39m[22m     │ 0       │ 0          │ 0               ║
╟─────────────────────────────┼───────┼─────────┼────────────┼─────────────────╢
║ import/order                │ [31m[1m1[39m[22m     │ 0       │ 0          │ 0               ║
╟─────────────────────────────┼───────┼─────────┼────────────┼─────────────────╢
║ no-unused-vars              │ [31m[1m1[39m[22m     │ 0       │ 0          │ 0               ║
╟─────────────────────────────┼───────┼─────────┼────────────┼─────────────────╢
║ ]8;;https://example.comprefer-const]8;;                │ [31m[1m1[39m[22m     │ [31m[1m1[39m[22m       │ [31m[1m2[39m[22m          │ 0               ║
╚═════════════════════════════╧═══════╧═════════╧════════════╧═════════════════╝
"
`;
